--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "dev": "tsx watch ./src/main.ts"
   },
   "keywords": [],
@@ -12,11 +12,19 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
+    "@types/multer": "^1.4.7",
+    "@types/supertest": "^2.0.12",
+    "jest": "^29.6.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "tsx": "^3.12.7",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "mongoose": "^7.4.2"
+    "mongoose": "^7.4.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
