--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
+    "test": "jest --forceExit",
     "dev": "tsx watch ./src/main.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/babel__generator": "^7.6.4",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.3",
     "@types/multer": "^1.4.7",
@@ -23,6 +25,7 @@
     "typescript": "^5.1.6"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "mongoose": "^7.4.2",
     "multer": "^1.4.5-lts.1"
